--- a/Twitter_Sentiment_Analysis.ipynb
+++ b/Twitter_Sentiment_Analysis.ipynb
@@ -3047,11 +3047,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "----\n",
+        "\n",
+        "### For requirements.txt file"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "LuE9VjxqlR9R"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "streamlit 1.52.2\n",
+            "numpy 2.1.3\n",
+            "pandas 2.2.3\n",
+            "scikit-learn 1.6.1\n",
+            "nltk 3.9.1\n",
+            "matplotlib 3.10.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "import streamlit, numpy, pandas, sklearn, nltk, matplotlib\n",
+        "\n",
+        "print(\"streamlit\", streamlit.__version__)\n",
+        "print(\"numpy\", numpy.__version__)\n",
+        "print(\"pandas\", pandas.__version__)\n",
+        "print(\"scikit-learn\", sklearn.__version__)\n",
+        "print(\"nltk\", nltk.__version__)\n",
+        "print(\"matplotlib\", matplotlib.__version__)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -3061,11 +3099,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.5"
     }
   },
   "nbformat": 4,
